Terminada implementação da tela de cadastro

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".views.fragments.SignUpActivity"
+            android:name=".views.activities.SignUpActivity"
             android:screenOrientation="portrait"/>
         <activity
             android:name=".views.activities.SignInActivity"
